@@ -1,3 +1,11 @@
+2015-02-04  Mark Wielaard  <mjw@redhat.com>
+
+	* utils.h (producer_is_gcc): Change return type to bool. Add major
+	argument.
+	* utils.c (producer_is_gcc): Likewise.
+	(producer_is_gcc_ge_4): Adjust producer_is_gcc call.
+	* dwarf2read.c (check_producer): Likewise.
+
 2015-02-10  Pedro Alves  <palves@redhat.com>
 
 	* infrun.c (displaced_step_fixup): Switch to the event thread
